# parallax-maker

./: .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  PACKAGING.md  README.md  __init__.py  automatic1111.py  camera.py  clientside.py  comfyui.py  components.py  constants.py  controller.py  depth.py  fix_imports.py  gltf.py  gltf_cli.py  inpainting.py  instance.py  package.json  pyproject.toml  requirements.txt  segmentation.py  setup_dev.py  slice.py  stabilityai.py  tailwind.config.js  tailwind.css  test_automatic1111.py  test_components.py  test_constants.py  test_controller.py  test_gltf.py  test_inpainting.py  test_installation.py  test_instance.py  test_segmentation.py  test_stabilityai.py  test_upscaler.py  (+5 more)
.github/workflows/: docker-publish.yml  publish.yml  python-app.yml
assets/css/: features.css  tailwind_compiled.css
assets/scripts/: utility.js
example/: workflow.json
parallax_maker/: __init__.py  automatic1111.py  camera.py  clientside.py  comfyui.py  components.py  constants.py  controller.py  depth.py  falai.py  gltf.py  gltf_cli.py  inpainting.py  instance.py  segmentation.py  setup_dev.py  slice.py  stabilityai.py  test_automatic1111.py  test_components.py  test_constants.py  test_controller.py  test_gltf.py  test_inpainting.py  test_instance.py  test_segmentation.py  test_stabilityai.py  test_upscaler.py  test_utils.py  test_webui.py  upscaler.py  utils.py  webui.py
parallax_maker/assets/scripts/: utility.js
